substrate/frame/support/test/tests/pallet_ui/type_value_invalid_item.stderr
error: Invalid pallet::type_value, expected item fn
  --> tests/pallet_ui/type_value_invalid_item.rs:35:24
   |
35 |     #[pallet::type_value] struct Foo;
   |                           ^^^^^^
